Shift start-stop and reset icons.

--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Questrial&display=swap');
+
 body,html{
   background-color: #FDF5C5;
+  font-family: 'Questrial', sans-serif;
+}
+h1{
+  padding-top: 5%;
+  font-size: 25px;
 }
 /* Updating bootstrap row class */
 .row{
@@ -8,7 +15,16 @@ body,html{
 }
 
 i {
-  font-size: 20px;
+  font-size: 18px;
+  cursor: pointer;
+}
+#reset{
+  margin-left: 8px;
+  margin-bottom: 4px;
+}
+#start_stop{
+  margin-left: 8px;
+  margin-bottom: 4px; 
 }
 #session-length {
   margin: 2px 0 2px 0;
@@ -43,6 +59,8 @@ i {
 }
 #time-left{
   margin: 2px;
+  font-size: 35px;
+  font-weight: bold;
 }
 .no-margin{
   margin: 0 !important;
